contrast fix

--- a/styles/overlays.less
+++ b/styles/overlays.less
@@ -97,8 +97,10 @@ atom-panel.modal {
     .text(normal);
   }
 
+  .left-label,
   .right-label {
     .text(invert);
+    .text(bold);
   }
 
   .suggestion-description {
