--- a/styles/ui-mixins.less
+++ b/styles/ui-mixins.less
@@ -41,7 +41,7 @@
   font-weight: 600;
 }
 .text(invert) {
-  color: @base-background-color;
+  color: @app-background-color;
 }
 
 .transition() {
